--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -90,7 +90,7 @@ transactions:
   blockchain, Miners forward packets to Routers that own them based on their OUI
   as stored in the blockchain.
 - `payment` - Used to send $HNT from one wallet to another.
-- `proof of coverage receipts` - The result of a POC submitted to the network
+- `proof of coverage receipts` - The result of a PoC submitted to the network
   upon completion.
 - `redeem hashed timelock` - Redeem the transaction created using the create
   hashed timelock transaction.
@@ -117,7 +117,7 @@ transactions:
 Chain Variables, often referred to as `chain vars`, are a series of
 configuration settings for the Helium blockchain. Chain Variables can be used to
 change things like target block time, target epoch time, the minimum number of
-targets in a POC Challenge, and much more. Chain Variables can be altered by
+targets in a PoC Challenge, and much more. Chain Variables can be altered by
 submitting a transaction containing the chain variable to be changed, its new
 value, and a signature of the chain variable master key.
 
