--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -25,7 +25,7 @@ Hotspots earn by providing and validating network coverage provided by other hot
 It's best to have at least one or two other hotspots within radio range of you so that you can participate in PoC Challenges to earn rewards a higher rate of HNT.  If you are the only Hotspot in your area, you can still earn HNT if a device uses your Hotspots and by initiating the Challenges.  Tokens are distributed based on these economics.
  
 ### Can I have more than one Hotspot at the same location?
-If Hotspots are too close - less than 300 meters - they will not be eligible twitness each other as part of POC challenges and may compete with each other for challenges. Their overall participation in Proof-of-Coverage would be impacted also, since rewards are also density based.  Proof of coverage rewards good, wide coverage. You'll earn more HNT if you do this. 
+If Hotspots are too close - less than 300 meters - they will not be eligible twitness each other as part of PoC challenges and may compete with each other for challenges. Their overall participation in Proof-of-Coverage would be impacted also, since rewards are also density based.  Proof of coverage rewards good, wide coverage. You'll earn more HNT if you do this. 
  
 ### How do I earn Helium?
 Once deployed via the Helium Wallet and fully synced, there are five ways your Hotspot earns HNT.  A full list of [mining rewards can be found here](/blockchain/mining). 
