--- a/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
@@ -27,7 +27,7 @@ Helium Network roaming most closely resembles the LoRa Alliance's idea of "Passi
 
 To ingest packets as a roaming partner, you need to accept Semtech GWMP client connections for the amount of Helium Hotspots that are receiving and routing your packets. Currently,[ this could be a lot](https://explorer.helium.com/hotspots) - assuming you are considering the entire global network. If we consider the United States only, for example, it's about 95,000 total potential gateways. In practice, only a small percentage of Helium gateways will be routing packets for a roaming partner NetID simultaneously.
 
-When the roaming POC is initiated, Helium provide one or more IPs from where the connections will originate. You will need to supply the IP and port for the host listening for Semtech GWMP connections over UDP. Once provided, packets will start arriving at the specified host.
+When the roaming PoC is initiated, Helium provide one or more IPs from where the connections will originate. You will need to supply the IP and port for the host listening for Semtech GWMP connections over UDP. Once provided, packets will start arriving at the specified host.
 
 ## Supported Device Functionality
 
