--- a/docs/mine-hnt/full-hotspots/become-a-maker/basic-miner-operation.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/basic-miner-operation.mdx
@@ -23,8 +23,8 @@ micro-transactions brokered via libp2p
 is interested in receiving the packets relating to its devices and handles
 downlink messages when appropriate
 
-In addition to packet routing, the Miner also participates in POC and submits
-POC packets as witness events. When challenge, the Miner sends packets to the
+In addition to packet routing, the Miner also participates in PoC and submits
+PoC packets as witness events. When challenge, the Miner sends packets to the
 packet forwarder for transmission.
 
 The Miner connects to other Miners over libp2p where, amongst other things,
@@ -217,7 +217,7 @@ Or create an alias such as: `alias miner="docker exec miner miner"`
 From time to time, the Helium Miner is updated. Keep tabs on
 [the releases here](https://github.com/helium/miner/releases). Depending on
 whether you are running a miner for fun, to route packets, or to participate in
-POC, keeping it updated may be more or less urgent. Each release tagged on the
+PoC, keeping it updated may be more or less urgent. Each release tagged on the
 Github will be on the quay repository. Simply remove the current image:
 
 ```text
