--- a/docs/use-the-network/console/profiles.mdx
+++ b/docs/use-the-network/console/profiles.mdx
@@ -22,7 +22,7 @@ Current settings that can be set via Profiles:
 - [CF List](#cf-list) 
 
 :::info
-For a video walkthrough of configuring ADR and CF List, check out our Tips and Tricks video [here](https://youtu.be/9nlkAEI1V-Q).
+For a video walkthrough of Configuration Profiles, check out our Tips and Tricks video [here](https://youtu.be/U0IHGT_irj8).
 :::
 
 ## ADR
