--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -23,18 +23,18 @@ Only Hotspots that have successfully transferred packets are displayed on the Co
 
 :::
 
-`My Hotspots` is a simple way to filter and view only Hotspots users want to see. Select the flag icon next to a Hotspot name for it to appear in the My Hotspots list. 
+`My Hotspots` is a simple way to filter and view only Hotspots users want to see. Under `Coverage Breakdown`, select the flag icon next to a Hotspot name and click **Follow Selected Hotspots** for it to appear in the `My Hotspots` list.
 
 If a Hotspot has not transferred data but is still of interest, simply navigate to `Hotspot Search` run a search for it, and it will appear in the My Hotspots list. Users can also use a wallet address and all Hotspots associated with that wallet address will appear.
 
-## Monitoring Hotspots stats and status
+## Monitor Hotspots stats and status
 Coverage displays a number of Hotspots details including Hotspot location, packets transferred, and number of devices that it’s “seen”.
 
 Simply click a Hotspot name to view more detailed Hotspot stats. Depending on the tab, users can display overall stats (`Statistics` tab) or a list of the devices heard from the last 24 hours with the `My Devices Heard` tab. 
 
 Clicking any device name takes users to the specific device page for more details. 
 
-## Creating Hotspot Aliases
+## Create Hotspot Aliases
 Coverage allows users to easily create an alias for easier identification of the Hotspot. Click a Hotspot name, then under its animal name, click `No Alias` to define an Alias.
 
 <img
@@ -43,4 +43,30 @@ Coverage allows users to easily create an alias for easier identification of the
   )}
 />
 
+## Group Hotspots
 
+The Coverage feature allows users to create Hotspot groups for easy management. To be added to a group, Hotspots must initially be followed and appear in the My Hotspots area. 
+To add Hotspots to `My Hotspot` list check [here](https://docs.helium.com/use-the-network/console/coverage/#identify-hotspots-that-hear-devices).
+
+### Creating a Hotspot group
+- On the left-hand menu, choose **Coverage**.
+- Under `My Hotspot Groups`, click **+ Create Hotspot Group**, and enter the group name (minimum 3 characters).
+
+### Adding a Hotspot to a group
+Before a Hotspot can be added to a group it must be followed and appear in the `My Hotspots` list. 
+
+- Under `My Hotspots`, choose the Hotspot row and under the `Groups` column choose the name of the desired Group. Note: Hotspots can belong in multiple groups.
+
+### Removing a Hotspot from a group
+A Hotspot can easily be removed from groups. Note: Hotspots continue to exist under `My Hotspots` and this action only removes the Hotspot from the group.
+
+- Under `My Hotspots`, click the Group that includes the Hotspot(s) you want to remove.
+- Choose the row of the Hotspot to remove and under the `Groups` column click the blue check next to the group name. The Hotspot is removed from the group. Note: Hotspots can belong in multiple groups.
+
+### Modifying groups
+Groups can be renamed or deleted. 
+
+- Under `My Hotspots`, click the Group you want to:
+  - Rename: Click **Rename Hotspot Group**, type the name, and click **Submit**.
+  - Delete: Click **Delete Hotspot Group**. A confirmation message appears with Hotspots in the group. Note the Hotspots in a deleted group continue to exist under `My Hotspots` and this action only deletes the group.
+- Click **Submit** to delete the group. 
