--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -333,6 +333,13 @@ Device EUI.
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
+_Headers_
+
+| Parameter Name     | Type     | Description                          |
+| ------------------ | -------- | ------------------------------------ |
+| key (required)    | _string_ | your API key |
+| content-type (required) | _string_ | application/json              |
+
 _Body Parameters_
 
 | Parameter Name     | Type     | Description                          |
@@ -438,6 +445,13 @@ Create a new label with the given name.
   defaultValue="request"
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
+
+_Headers_
+
+| Parameter Name     | Type     | Description                          |
+| ------------------ | -------- | ------------------------------------ |
+| key (required)    | _string_ | your API key |
+| content-type (required) | _string_ | application/json              |
 
 _Body Parameters_
 
@@ -600,6 +614,13 @@ Add Device to Label
   defaultValue="request"
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
+
+_Headers_
+
+| Parameter Name     | Type     | Description                          |
+| ------------------ | -------- | ------------------------------------ |
+| key (required)    | _string_ | your API key |
+| content-type (required) | _string_ | application/json              |
 
 _Path Parameters_
 
