add console api auth ref

--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -39,6 +39,13 @@ the account that created the API key.
 From then on, you will want to include the API key in all of your API requests.
 You do this by placing your API key in an HTTP header field called "key.
 
+_Headers_
+
+| Parameter Name     | Type     | Description                          |
+| ------------------ | -------- | ------------------------------------ |
+| key (required)    | _string_ | your API key |
+| content-type (required) | _string_ | application/json              |
+
 ---
 
 ### Devices List
