coverage group feature
added feature description

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -35,7 +35,7 @@ Learn more about how to get started using Console with our Tips and Tricks video
 ### Data
 * [Transferring (Integrations)](/use-the-network/console/integrations)
 * [Decoding](/use-the-network/console/functions)
-* [Monitoring Gateways/Hotspots](/use-the-network/console/coverage)
+* [Monitoring Gateways/Hotspots (Coverage)](/use-the-network/console/coverage)
 
 ### Configurations
 * [Node Interface (Flows)](/use-the-network/console/flows)
