--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -55,18 +55,18 @@ To add Hotspots to `My Hotspot` list check [here](https://docs.helium.com/use-th
 ### Adding a Hotspot to a group
 Before a Hotspot can be added to a group it must be followed and appear in the `My Hotspots` list. 
 
-- Under `My Hotspots`, choose the Hotspot row and under the `Groups` column choose the name of the desired Group. Note: Hotspots can belong in multiple groups.
+- Under `My Hotspots`, select the desired Hotspot row, and under the `Groups` column click and choose the name of the desired Group to add the Hotspot. Note: Hotspots can belong in multiple groups.
 
 ### Removing a Hotspot from a group
-A Hotspot can easily be removed from groups. Note: Hotspots continue to exist under `My Hotspots` and this action only removes the Hotspot from the group.
+A Hotspot can easily be removed from a group. Note: this action only removes the Hotspot from the group, and it will continue to appear in the `My Hotspots` list.
 
-- Under `My Hotspots`, click the Group that includes the Hotspot(s) you want to remove.
-- Choose the row of the Hotspot to remove and under the `Groups` column click the blue check next to the group name. The Hotspot is removed from the group. Note: Hotspots can belong in multiple groups.
+- Under `My Hotspots Group`, click the Group that includes the Hotspot(s) you want to remove.
+- Select the row of the Hotspot to remove and under the `Groups` column click the blue check next to the group name. The Hotspot is removed from the group. Note: Hotspots can belong in multiple groups.
 
 ### Modifying groups
 Groups can be renamed or deleted. 
 
-- Under `My Hotspots`, click the Group you want to:
+- Under `My Hotspots Group`, click the Group you want to:
   - Rename: Click **Rename Hotspot Group**, type the name, and click **Submit**.
-  - Delete: Click **Delete Hotspot Group**. A confirmation message appears with Hotspots in the group. Note the Hotspots in a deleted group continue to exist under `My Hotspots` and this action only deletes the group.
-- Click **Submit** to delete the group. 
+  - Delete: Click **Delete Hotspot Group**. A confirmation message appears with Hotspots in the group. Click **Submit** to delete the group. 
+  Note: Hotspots in a deleted group will continue to appear in the `My Hotspots` list, and this action only deletes the group. 
