--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -44,10 +44,10 @@ while it runs.
 
 ## Target $HNT Production Per Epoch
 
-As of August 1, 2021 (the most-recent halving), the target production rate for new $HNT minted per month is `2,500,000`. This
-means that, if the blockchain performs as designed, it will produce `2,500,000`
-HNT per month. This target rate is based on the following two parameters, as
-defined in their specific chain variables:
+As of August 1, 2021 (the most-recent halving), the target production rate for new $HNT minted per month is `2,500,000,000`. This
+means that, if the blockchain performs as designed, it will produce 
+`2,500,000,000` HNT per month. This target rate is based on the following two 
+parameters, as defined in their specific chain variables:
 
 - Target **block time** is `60` seconds.
 - Target **epoch size** is `30` blocks.
@@ -57,11 +57,13 @@ transactions, and epochs are comprised of all the blocks mined by the current
 Consensus Group since the last epoch.
 
 So, if the Network achieves its target block time of `60` seconds, and target
-epoch of `30` blocks, the blockchain will produce `2,500,000` HNT per month. Per
-epoch, this equals roughly `1712.704154343` HNT. The math for this is as follows:
+epoch of `30` blocks, the blockchain will produce `2,500,000,000` HNT per 
+month. Per epoch, this equals roughly `1,712,704.154343` HNT. The math for this 
+is as follows:
 
 - `(43200 minutes per month / 30 minutes per epoch) = 1440 epochs per month`
-- `(2500000 tokens minted per month / 1440 epochs per month) = 1736.1111 HNT per epoch`
+- `(2,500,000,000 tokens minted per month / 1440 epochs per month) = 
+1,736,111.1 HNT per epoch`
 
 ### What Are The Current Block and Epoch Times?
 
@@ -71,8 +73,8 @@ and epoch statistics, past $HNT production numbers, and much more.
 
 ## HNT Distributions Per Epoch
 
-As calculated above, the target `HNT` per epoch is approximately `1736.1111`. The
-next logical question is, "Where does all this HNT go?" Let's take a look.
+As calculated above, the target `HNT` per epoch is approximately `1,736,111.1`. 
+The next logical question is, "Where does all this HNT go?" Let's take a look.
 
 Below are the mining rewards per epoch as of August 1, 2021. For every complete epoch, marked by the
 election of a new Consensus Group, all the `HNT` produced are distributed over
@@ -80,13 +82,13 @@ the following reward types:
 
 | Reward Type           | Percentage    | HNT Earned by Reward Type |
 | :-------------------- | :------------ | :------------------------ |
-| PoC Challenger        | 0.90%         | 15.6250               |
-| PoC Challengees       | 5.02%         | 87.1527               |
-| Witnesses             | 20.08%        | 348.6111              |
-| Consensus Group       | 6%            | 104.1666              |
-| Security Tokens       | 33%           | 572.9166              |
-| Network Data Transfer | _Up to 35%_   | _Up to 607.6389       |
-| **Total**             | **100%**      | **1736.1111**         |
+| PoC Challenger        | 0.90%         | 15,625.0               |
+| PoC Challengees       | 5.02%         | 87,152.7               |
+| Witnesses             | 20.08%        | 348,611.1              |
+| Consensus Group       | 6%            | 104,166.6              |
+| Security Tokens       | 33%           | 572,916.6              |
+| Network Data Transfer | _Up to 35%_   | _Up to 607,638.9_      |
+| **Total**             | **100%**      | **1,736,111.1**         |
 
 **Rewards Change Over Time**
 
@@ -106,8 +108,8 @@ the Helium Community. It ensures that $HNT is rewarded at a rate of 1:1 to the
 amount of Data Credits (DCs) routed by any given Hotspot per epoch. In doing so,
 the Network Data Transfer reward is proportional to the DC spent that epoch.
 This proportional relationship between Network Data Transfer reward type and DC
-is capped at 35% (607.6389 HNT). Therefore, if the DC burned doesn't equal
-the value of `607.6389` HNT, the remaining HNT is redistributed to the Proof of
+is capped at 35% (607638.9 HNT). Therefore, if the DC burned doesn't equal
+the value of `607,638.9` HNT, the remaining HNT is redistributed to the Proof of
 Coverage (PoC) rewards groups pro-rata.
 
 Here are a few examples to illustrate how this works in practice:
@@ -116,28 +118,29 @@ Here are a few examples to illustrate how this works in practice:
 
 - In a given epoch, `2,000,000` DCs are transferred across the network
 - The HNT Oracle Price is `$2.00`
-- In this scenario, total HNT value of DC transferred in this epoch is `10HNT`.
-  This calculation is:`(2,000,000 DC * $0.00001 / $2 HNT Oracle Price)`
-- These `10 HNT` would be split proportionally to the Hotspots who did the work
+- In this scenario, total HNT value of DC transferred in this epoch is `400HNT`.
+  This calculation is: `(2,000,000 DC * $0.00001 / $0.05 HNT Oracle Price)`
+- These `400 HNT` would be split proportionally to the Hotspots who did the work
   routing packets at the 1:1 rate.
-- The remaining `597.6389` from the Network Data Transfer reward would be
+- The remaining `607,238.9` from the Network Data Transfer reward would be
   distributed ratably among the Challengers, Witnesses and Challengees.
-  - `20.6457` to the Challenger group
-  - `461.5945` to the Witness group
-  - `115.3986` to the Challengee group
+  - `20,977.34` to the Challenger group
+  - `469,009.19` to the Witness group
+  - `117,252.27` to the Challengee group
 
 **Example 2: DC Burn exceeds 35% HNT**
 
-- In a given epoch, `500,000,000` DCs are spent on data transfer across the
+- In a given epoch, `5,000,000,000` DCs are spent on data transfer across the
   network
-- The HNT Oracle Price is `$2.00`
+- The HNT Oracle Price is `$0.05`
 
-In this scenario, total HNT value of DC transferred in this epoch is `2500HNT`.
-This calculation is:`(500,000,000 DC * $0.00001 / $2 HNT Oracle Price)`
+In this scenario, total HNT value of DC transferred in this epoch is 
+`1,000,000HNT`. This calculation is: `(5,000,000,000 DC * $0.00001 / $0.05 HNT 
+Oracle Price)`
 
-- Because the Network DC burn exceeded the `607.6389` available to the
-  Network Data Transfer reward, all Hotspots who did the work over this epoch with
-  split the full `1113.0145HNT` proportionally.
+- Because the Network DC burn exceeded the `607,638.9` available to the
+  Network Data Transfer reward, all Hotspots who did the work over this epoch 
+  with split the full `1,163,194.5HNT` proportionally.
 
 **Additional Notes on Reward Types and Payouts**
 
@@ -156,19 +159,41 @@ This calculation is:`(500,000,000 DC * $0.00001 / $2 HNT Oracle Price)`
 - A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per
   epoch.
 
+## HIP39 and the Redenomination of HNT
+On November 20, 2021 the community voted to redenominate the Helium Token 
+through 
+[HIP39](https://github.com/helium/HIP/blob/master/0039-hnt-redenomination.md).
+**HIP39 was activated Febuary X, 2022... todo:link & actual date* 
+Prior to the redenomination, one HNT was equivalent to 100,000,000 bones -
+the atomic units of the Helium Token. (Like Satoshis for BTC). With 
+redenomination, one HNT is equivalent to 100,000 bones.
+
+**What Did This Mean for the Helium Token?**
+
+If you currently have 1,000 HNT worth $0.04 each, that would've been 
+denominated as 1 HNT worth $40 before the redenomination.
+
+`1000 HNT * $0.04 = $40` = `1 HNT * $40.00 = $40.00`
+
+Similarly, if you had previously been mining 0.25 HNT per day, that would now 
+be 250 HNT per day. Matching the above scenario, that would be worth $20 in 
+both situations.
+
+**A Bit More about Bones**
+
 ## HNT Proration and Slow Block Times
 
 The Helium blockchain is still new and growing quickly, so there are bugs to be
 squashed and optimizations to be made. Target block and epoch times can be
 difficult to attain consistently. To account for this, the Helium blockchain
-uses something called `proration` to ensure that the target of `2,500,000` is
+uses something called `proration` to ensure that the target of `2,500,000,000` is
 achieved even if block and epoch times aren't on target.
 
 **Target HNT Depends on Blocks, Not Clocks**
 
 It's easiest to think of target HNT production over the span of one month. If
 the blockchain performs on target, resulting in roughly 1460 epochs per month,
-then `2,500,000` new HNT will be produced. "One month" is a period of time
+then `2,500,000,000` new HNT will be produced. "One month" is a period of time
 measured by a clock. However, under the hood, we use block time, and the
 resulting epochs, to mark HNT production against our target. So when blocks are
 slow, HNT production is reduced proportionally.
@@ -179,15 +204,15 @@ Occasionally, due to the rapid growth of the network, there can be
 less-than-optimal block times. This results in slower epochs. When this happens
 the blockchain will produce **less** HNT over the same period of time. This may
 seem counterintuitive. _Shouldn't the blockchain produce more HNT when block
-times are slower to ensure the `2,500,000` per month target is hit?_ No. Again,
+times are slower to ensure the `2,500,000,000` per month target is hit?_ No. Again,
 think blocks, not clocks. Here's a step-by-step example to make it clearer:
 
 - Let's assume for a given `60` minute period, the average block time was `120`
   seconds (which is double the target of `60` seconds).
 - This would mark `30` blocks over the `60` minute period, conclude an epoch,
   and result in HNT rewards being distributed.
-- As with any epoch, we would distribute the target of (approximately) `1736.1111`
-  HNT.
+- As with any epoch, we would distribute the target of (approximately) 
+`1,736.1111` HNT.
 - However, since this epoch took twice as long as normal - `60` minutes versus
   `30` minute target - the blockchain essentially distributes HNT at **half the
   normal rate**.
