--- a/docs/use-the-network/console/functions.mdx
+++ b/docs/use-the-network/console/functions.mdx
@@ -120,4 +120,4 @@ You need to attach functions to:
 
  - a device or group of devices (via a label) and an integration: This results in the function being applied to payloads before being sent to the integration.
 
-Easily attach functions to devices, labels, and integations in the Flows Workspace. For more information about Flows click here [LINK]  
+Easily attach functions to devices, labels, and integations in the Flows Workspace. For more information about Flows click here [https://docs.helium.com/use-the-network/console/flows](/use-the-network/console/flows/)
