--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -124,10 +124,15 @@ earn $HNT.
 - Target Completion: Fall 2021
 - Status: Development Complete (Oct 11, 2021)
 
-Data Only Hotspots will earn $HNT for device data transfer. A further breakdown of progress is outlined below:
+Data Only Hotspots will earn $HNT for device data transfer. 
 
 #### Path to Milestone 3 and Milestone 4
 Work for both Milestone 3 and 4 are under way. The core team is currently focused on transitioning Full Hotspots to Light Hotspots due to the increasing size of the network and the amount of work needed to sustain this large peer-to-peer network.
+
+<img
+  className="docsheader"
+  src={useBaseUrl("img/mine-hnt/dev-timeline-light-hotspots.png")}
+/>
 
 - Change how Hotspots route data packets by replacing its `state_channel` client from erlang to rust, taking advantange of the improvements in gRPC and data streaming (complete)
 - Update how Hotspots receive, emit, and acknowledge proof-of-coverage receipts from erlang to rust (dev complete, testing on testnet, targets milestone 4)
