Adding a link to Max_Plastix T-Beam mapper repo

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -97,6 +97,7 @@ Flash your own code and spend your own Data Credits. Setting up a mapper from yo
     * [TTGO T-Beam (khrys)](https://github.com/khrys63/helium-mapper-tbeam)
     * [TTGO T-Beam (hekopath)](https://github.com/hekopath/ttgo-rev1-helium)
     * [TTGO T-Beam (tmiklas)](https://github.com/tmiklas/tbeam-helium-mapper)
+    * [TTGO T-Beam (Max_Plastix)](https://github.com/Max-Plastix/tbeam-helium-mapper)
 
 ### Configuration Basics
 At its core, contributing to Mappers is just a matter of delivering a specific payload through the console. Learn more about the [Mappers API](/use-the-network/coverage-mapping/mappers-api)
