--- a/docs/wallets/ledger.mdx
+++ b/docs/wallets/ledger.mdx
@@ -18,7 +18,7 @@ This guide will walk through using Helium on a Ledger Nano S but is similar to
 setup on the Nano X.
 
 :::info
-Ledger CLI using experimental mode is supported at this time. Work to enable HNT in Ledger Live without a CLI is ongoing.
+Ledger CLI using experimental mode is supported at this time. Work to enable HNT in Ledger Live in addition to a CLI is ongoing.
 :::
 
 ## Installing the Helium ledger application
