--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -9,14 +9,16 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 
 # Voting on Helium
-In order to approve or deny changes to the blockchain, economics, or governance of the Helium Network; Helium and DeWi leverage on-chain voting which is open to the entire community. This on-chain voting is currently facilited through the website [helium.vote](https://helium.vote). Voting power is determined by the HNT balance of the voting wallets at a rate of one vote per HNT. Proposals to implement a more involved voting mechanism have been presented, but have not been voted on or implemented yet. See: [HIP41](https://github.com/helium/HIP/blob/master/0041-governance-by-token-lock-v2.md)
+In order to approve or deny changes to the blockchain, economics, or governance of the Helium Network; Helium and DeWi leverage on-chain voting which is open to the entire community. This on-chain voting is currently facilited through the website [helium.vote](https://helium.vote). 
 
-HNT holders are able to vote by issuing small token burn transaction from their wallet to a wallet associated `For` or `Against` the proposal. Voting just a portion of a wallet's balance is not supported.
+For most votes, voting power is currently determined by the HNT balance of the voting wallets at a rate of one vote per HNT. However, voting power may change vote-to-vote, depending on what the community is reaching consensus on. As example, a vote on AU915 may only concern Hotspots in Australia and use Hotspots as votes. Proposals to implement more involved voting mechanisms have been presented, but have not been voted on or implemented yet. See: [HIP41](https://github.com/helium/HIP/blob/master/0041-governance-by-token-lock-v2.md)
+
+HNT holders are able to vote by issuing a small token burn transaction from their wallet to a wallet associated with a particular ballot option, typically `For` or `Against`. Voting just a portion of a wallet's balance is not supported.
 
 <!-- ## How to Vote -->
 
 ## Helium Vote Configuration
-This information is offered for the sake of transparency to the Helium Community and for the documentation of DeWi practices. Vote configuration is handled by DeWi to ensure that the accrued DC from a vote are burned from existance at the end of the voting period. This final burn of DC is largely ceremonial in nature. 
+This information is offered for the sake of transparency to the Helium Community and for the documentation of DeWi practices. Vote configuration is handled by DeWi to ensure that the accrued DC from a vote are burned from existance at the end of the voting period. 
 
 ### How a HIP Becomes a Vote 
 A vote can be created by opening a PR against the [Helium Vote repository](https://github.com/helium/helium-vote/). Templates are provided within the repo. Authors are encouraged to write their HIP description in a nonbiased manner, and are subject to review.
@@ -40,7 +42,7 @@ This wallet does not need to be retained, as it will not be used for any on-chai
 
 **Create Each Vote Option**
 
-Most votes will be binary, only needing one address `for` and `against`. The wallet generation process is the same. A wallet should be created for each vote option. These wallet keys should be retained by DeWi for the sake of burning accrued DC at the end of the vote.
+Most votes will be binary, only needing one address `for` and `against`. The wallet generation process is the same. A wallet is be created for each vote option. These wallet keys should be retained by DeWi for the sake of burning accrued DC at the end of the vote.
 
 **Post Vote Cleanup**
 
