--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -126,7 +126,7 @@ earn $HNT.
 
 Data Only Hotspots will earn $HNT for device data transfer. 
 
-#### Path to Milestone 3 and Milestone 4
+### Path to Milestone 3 and Milestone 4
 Work for both Milestone 3 and 4 are under way. The core team is currently focused on transitioning Full Hotspots to Light Hotspots due to the increasing size of the network and the amount of work needed to sustain this large peer-to-peer network.
 
 <img
@@ -134,10 +134,10 @@ Work for both Milestone 3 and 4 are under way. The core team is currently focuse
   src={useBaseUrl("img/mine-hnt/dev-timeline-light-hotspots.png")}
 />
 
-### Milestone 3: Introduction of Light Hotspots
+### Milestone 3: Light Hotspots as a new Hardware variant 
 
-- Target Completion: Q2 2022
-- Status: Development in Progress/PoC work started
+- New Hardware Available to Customers: No sooner than Q2 2022, depending on Manufacturer
+- Status: HIP-19 Makers undergoing Hardware Audit
 
 Approved Hotspots from
 [HIP19-approved manufacturers](/mine-hnt/full-hotspots/#approved-makers) with
@@ -160,7 +160,7 @@ At this stage, there will be three types of Hotspots:
 2. Light Hotspot (HIP-19 approved, earns HNT for PoC and Data Transfer)
 3. Data Only Hotspot (DIY LoRaWAN Gateway, earns HNT for Data Transfer)
 
-### Milestone 4: "Heavy" Hotspots -> Light Hotspots
+### Milestone 4: Software Update to Existing Hotspots to transform them into Light Hotspots
 
 - Target Completion: Q1 2021
 - Status: Development in Progress
