--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -136,18 +136,27 @@ Work for both Milestone 3 and 4 are under way. The core team is currently focuse
 
 ### Milestone 3: Light Hotspots as a new Hardware variant 
 
-- New Hardware Available to Customers: No sooner than Q2 2022, depending on Manufacturer
+- New Hardware Available to Customers: Starting in 2022, depending on Manufacturer
 - Status: HIP-19 Makers undergoing Hardware Audit
 
 Approved Hotspots from
 [HIP19-approved manufacturers](/mine-hnt/full-hotspots/#approved-makers) with
 lower compute requirements can be added to the network and participate in PoC.
 
+#### Rough Timeline for Light Hotspot Makers:
+1. Submit HIP-19 Application to DeWi
+2. Pass KYC
+3. Enter queue for Hardware Audit
+4. Pass Hardware Audit/obtain any related certifications
+5. Load latest `gateway-rs` build on manufacturing line
+6. Manufacture Light Hotspots
+
 :::info
 
 HIP-19 Makers: Hardware Audit will commence as soon as early December. Milestone 3 completion is not required for Audit. Please contact MOC for more details.
 
 :::
+
 
 Onboarding for these Light Hotspots will be done via the standard Helium Wallet
 app onboarding. The fees will be equivalent to other Approved Hotspots ($40 and
